--- a/webd/index1.html
+++ b/webd/index1.html
@@ -140,7 +140,7 @@
         </article>
 
         <article class="ad">
-          <a href=""><img src="1111/img/lo_2.jpg" alt="온종일혜택" /></a>
+          <a href="#"><img src="1111/img/lo_2.jpg" alt="온종일혜택" /></a>
         </article>
       </section>
 
@@ -243,7 +243,7 @@
     </script>
 
     <script>
-      $(".ad").click(function () {
+      $(".ad img").click(function () {
         $(".layer_bg").css("display", "block");
         // $(".layer_bg").show();
       });
