--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -1110,15 +1110,42 @@ const currentStr4 = str1.charAt("2"); //v
         const currentStr8 = str1.match(/e/g); //['e', 'e', 'e', 'e']
       }
 
-      //14. charAt()
+      //14. charAt()/ chartCodeAt()
       {
-        "문자열".charAt(숫자);
-
+        // "문자열".charAt(숫자);
         const str1 = "javascript reference";
         const currentStr1 = str1.charAt(); //j
         const currentStr2 = str1.charAt("0"); //j
         const currentStr3 = str1.charAt("1"); //a
         const currentStr4 = str1.charAt("2"); //v
+
+        // "문자열".chartCodeAt(숫자); 유니코드값
+        const currentStr5 = str1.chartCodeAt(); //106
+        const currentStr6 = str1.chartCodeAt("0"); //106
+        const currentStr7 = str1.chartCodeAt("1"); //97
+        const currentStr8 = str1.chartCodeAt("2"); //118
+      }
+
+      //15. startsWith():시작하는 문자열에서 불린으로 반환/ endsWith():끝나는 문자열에서 불린으로 반환
+      {
+        const str1 = "javascript reference";
+        const currentStr1 = str1.startsWith("javascript"); //true
+        const currentStr2 = str1.startsWith("j"); //true
+        const currentStr3 = str1.startsWith("java"); //true
+        const currentStr4 = str1.startsWith("reference"); //false
+        const currentStr5 = str1.startsWith(); //false
+        const currentStr6 = str1.startsWith(""); //true
+        const currentStr7 = str1.startsWith("reference", 7); //false
+        const currentStr8 = str1.startsWith("reference", 11); //true
+
+        const currentStr9 = str1.endsWith("javascript"); //true
+        const currentStr10 = str1.endsWith("e"); //true
+        const currentStr11 = str1.endsWith("refer"); //false
+        const currentStr12 = str1.endsWith("javascript"); //false
+        const currentStr13 = str1.endsWith(); //false
+        const currentStr14 = str1.endsWith(""); //true
+        const currentStr15 = str1.endsWith("reference", 7); //false
+        const currentStr16 = str1.endsWith("reference", 20); //true
       }
     </script>
   </body>
