--- a/webd/index.html
+++ b/webd/index.html
@@ -140,7 +140,7 @@
         </article>
 
         <article class="ad">
-          <a href=""><img src="1111/img/lo_2.jpg" alt="온종일혜택" /></a>
+          <a href="#"><img src="1111/img/lo_2.jpg" alt="온종일혜택" /></a>
         </article>
       </section>
 
