--- a/site/textType/textType01.html
+++ b/site/textType/textType01.html
@@ -1,237 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>텍스트유형</title>
+        <style>
+            /* fonts */
+            @import url("https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css");
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트유형</title>
-    <style>
-        /* fonts */
-        @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
+            .nexon {
+                font-family: "NexonLv1Gothic";
+                font-weight: 400;
+            }
 
+            /* reset */
+            * {
+                margin: 0;
+                padding: 0;
+            }
 
-        .nexon {
-            font-family: 'NexonLv1Gothic';
-            font-weight: 400;
-        }
+            a {
+                text-decoration: none;
+                color: #000;
+            }
 
-        /* reset */
-        * {
-            margin: 0;
-            padding: 0;
-        }
+            img {
+                width: 100%;
+            }
 
-        a {
-            text-decoration: none;
-            color: #000;
-        }
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6 {
+                font-weight: normal;
+            }
 
-        img {
-            width: 100%;
-        }
+            /* common */
+            .container {
+                width: 1160px;
+                padding: 0 20px;
+                margin: 0 auto;
+                min-width: 1160px;
+            }
 
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-weight: normal;
-        }
+            .section {
+                padding: 120px 0;
+            }
 
-        /* common */
-        .container {
-            width: 1160px;
-            padding: 0 20px;
-            margin: 0 auto;
-            min-width: 1160px;
-        }
+            .section > h2 {
+                font-size: 50px;
+                line-height: 1;
+                text-align: center;
+                margin-bottom: 20px;
+            }
 
-        .section {
-            padding: 120px 0;
-        }
+            .section > p {
+                font-size: 22px;
+                font-weight: 300;
+                color: #666;
+                text-align: center;
+                margin-bottom: 70px;
+            }
 
-        .section>h2 {
-            font-size: 50px;
-            line-height: 1;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+            .section > span {
+                display: block;
+                text-align: center;
+                font-size: 16px;
+                text-decoration: underline;
+                margin-bottom: 16px;
+            }
 
-        .section>p {
-            font-size: 22px;
-            font-weight: 300;
-            color: #666;
-            text-align: center;
-            margin-bottom: 70px;
-        }
+            .mb70 {
+                margin-bottom: 70px !important;
+            }
 
-        .section>span {
-            display: block;
-            text-align: center;
-            font-size: 16px;
-            text-decoration: underline;
-            margin-bottom: 16px;
-        }
+            /* textType */
+            .text__innner {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
 
-        .mb70 {
-            margin-bottom: 70px !important;
-        }
+            .text {
+                width: 32%;
+                margin-bottom: 2%;
+                padding: 20px;
+                box-sizing: border-box;
+                border-radius: 10px;
+                transition: background 0.4s;
+            }
 
-        /* textType */
-        .text__innner {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
+            .text:hover {
+                background: #f5f5f5;
+            }
 
-        .text {
-            width: 32%;
-            margin-bottom: 2%;
-            padding: 20px;
-            box-sizing: border-box;
-            border-radius: 10px;
-            transition: background 0.4s;
-        }
+            .text__title {
+                font-size: 24px;
+                line-height: 1;
+                margin-bottom: 10px;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                position: relative;
+                padding-top: 75px;
+            }
 
-        .text:hover {
-            background: #f5f5f5;
-        }
+            .text__title::before {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 60px;
+                height: 60px;
+                background: url(img/text_icon.svg);
+            }
 
-        .text__title {
-            font-size: 24px;
-            line-height: 1;
-            margin-bottom: 10px;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            position: relative;
-            padding-top: 75px;
-        }
+            .text.t1 .text__title::before {
+                background-position: 0 0;
+            }
 
-        .text__title::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 60px;
-            height: 60px;
-            background: url(img/text_icon.svg);
-        }
+            .text.t2 .text__title::before {
+                background-position: -60px 0;
+            }
 
-        .text.t1 .text__title::before {
-            background-position: 0 0;
-        }
+            .text.t3 .text__title::before {
+                background-position: -120px 0;
+            }
 
-        .text.t2 .text__title::before {
-            background-position: -60px 0;
-        }
+            .text.t4 .text__title::before {
+                background-position: -180px 0;
+            }
 
-        .text.t3 .text__title::before {
-            background-position: -120px 0;
-        }
+            .text.t5 .text__title::before {
+                background-position: -240px 0;
+            }
 
-        .text.t4 .text__title::before {
-            background-position: -180px 0;
-        }
+            .text.t6 .text__title::before {
+                background-position: -300px 0;
+            }
 
-        .text.t5 .text__title::before {
-            background-position: -240px 0;
-        }
+            .text__desc {
+                font-size: 18px;
+                font-weight: 300;
+                line-height: 1.4;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                color: #666;
+                margin-bottom: 20px;
+            }
 
-        .text.t6 .text__title::before {
-            background-position: -300px 0;
-        }
+            .text_btn {
+                font-size: 16px;
+                line-height: 1;
+                text-decoration: underline;
+                text-underline-position: under;
+                color: #666;
+            }
 
-        .text__desc {
-            font-size: 18px;
-            font-weight: 300;
-            line-height: 1.4;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            color: #666;
-            margin-bottom: 20px;
-        }
+            .text__top {
+                display: flex;
+            }
 
-        .text_btn {
-            font-size: 16px;
-            line-height: 1;
-            text-decoration: underline;
-            text-underline-position: under;
-            color: #666;
-        }
+            .text__bottom {
+                display: flex;
+            }
 
-        .text__top {
-            display: flex;
-        }
+            .section > h2 {
+                margin-bottom: 60px;
+            }
+        </style>
+    </head>
 
-        .text__bottom {
-            display: flex;
-        }
-
-        .section>h2 {
-            margin-bottom: 60px;
-        }
-    </style>
-
-</head>
-
-<body>
-    <section id="textType" class="text__wrap nexon section">
-        <span>미술관 나들이</span>
-        <h2>유명한 국내 국외 미술관</h2>
-        <div class="text__inner container">
-            <div class="text__top">
-                <div class="text t1">
-                    <h3 class="text__title">경기도 미술관 </h3>
-                    <p class="text__desc">경기도의 주요 정치, 사회, 문화 이슈를 주제로
-                        한 <경기 아트 프로젝트전>, 현대미술의 다양
-                            한 형식과 내용을 조명하는 <동시대 현장>, 미</p>
-                    <a class="text_btn" href="/">더보기</a>
+    <body>
+        <section id="textType" class="text__wrap nexon section">
+            <span>미술관 나들이</span>
+            <h2>유명한 국내 국외 미술관</h2>
+            <div class="text__inner container">
+                <div class="text__top">
+                    <div class="text t1">
+                        <h3 class="text__title">경기도 미술관</h3>
+                        <p class="text__desc">
+                            경기도의 주요 정치, 사회, 문화 이슈를 주제로 한
+                            <경기 아트 프로젝트전>, 현대미술의 다양 한 형식과
+                            내용을 조명하는 <동시대 현장>, 미
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t2">
+                        <h3 class="text__title">국립현대미술관</h3>
+                        <p class="text__desc">
+                            국립현대미술관은 미술작품 및 자료의 수집·
+                            보존·전시·조사 및 연구와 이에 관한 국제교 류 및
+                            미술활동의 보급을 통한 국민의 미술문
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t3">
+                        <h3 class="text__title">K현대미술관</h3>
+                        <p class="text__desc">
+                            조명이 반짝이는 인더스트리얼풍의 미술관으 로 다양한
+                            현대 예술 전시가 정기적으로 열립 니다.
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
                 </div>
-                <div class="text t2">
-                    <h3 class="text__title">국립현대미술관</h3>
-                    <p class="text__desc">국립현대미술관은 미술작품 및 자료의 수집·
-                        보존·전시·조사 및 연구와 이에 관한 국제교
-                        류 및 미술활동의 보급을 통한 국민의 미술문</p>
-                    <a class="text_btn" href="/">더보기</a>
-                </div>
-                <div class="text t3">
-                    <h3 class="text__title">K현대미술관</h3>
-                    <p class="text__desc">조명이 반짝이는 인더스트리얼풍의 미술관으
-                        로 다양한 현대 예술 전시가 정기적으로 열립
-                        니다.</p>
-                    <a class="text_btn" href="/">더보기</a>
+                <div class="text__bottom">
+                    <div class="text t4">
+                        <h3 class="text__title">리움미술관</h3>
+                        <p class="text__desc">
+                            리움미술관은 서울특별시 용산구 한남동에 위 치한
+                            사립미술관으로 2004년 10월 19일 개 관했다.
+                            삼성그룹의 창립자 이병철의 수집품에
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t5">
+                        <h3 class="text__title">호암미술관</h3>
+                        <p class="text__desc">
+                            호암미술관 은 대한민국 경기도 용인시 처인 구 포곡읍
+                            에버랜드로 562번길 38에 있는 미 술관이다. 삼성그룹의
+                            창업자인 이병철이 수집
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
+                    <div class="text t6">
+                        <h3 class="text__title">서울시립 남서울미술관</h3>
+                        <p class="text__desc">
+                            남서울미술관은 역사의 정취가 가득한, 오래 머물고
+                            싶은 미술관입니다. 미술관이 둥지를 튼 이곳은
+                            대한제국(1897~1910) 시절 벨
+                        </p>
+                        <a class="text_btn" href="/">더보기</a>
+                    </div>
                 </div>
             </div>
-            <div class="text__bottom">
-                <div class="text t4">
-                    <h3 class="text__title">리움미술관</h3>
-                    <p class="text__desc">리움미술관은 서울특별시 용산구 한남동에 위
-                        치한 사립미술관으로 2004년 10월 19일 개
-                        관했다. 삼성그룹의 창립자 이병철의 수집품에</p>
-                    <a class="text_btn" href="/">더보기</a>
-                </div>
-                <div class="text t5">
-                    <h3 class="text__title">호암미술관</h3>
-                    <p class="text__desc">호암미술관 은 대한민국 경기도 용인시 처인
-                        구 포곡읍 에버랜드로 562번길 38에 있는 미
-                        술관이다. 삼성그룹의 창업자인 이병철이 수집</p>
-                    <a class="text_btn" href="/">더보기</a>
-                </div>
-                <div class="text t6">
-                    <h3 class="text__title">서울시립 남서울미술관</h3>
-                    <p class="text__desc">남서울미술관은 역사의 정취가 가득한, 오래
-                        머물고 싶은 미술관입니다. 미술관이 둥지를
-                        튼 이곳은 대한제국(1897~1910) 시절 벨</p>
-                    <a class="text_btn" href="/">더보기</a>
-                </div>
-            </div>
-        </div>
-    </section>
-</body>
-
+        </section>
+    </body>
 </html>
