--- a/sql/index.html
+++ b/sql/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, mo0647, publisher, css3, html, markup, design"
     />
-    <title>MJ | SVG Animation</title>
+    <title>SVG Animation</title>
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet" />
     <link href="../assets/css/docs.min.css" rel="stylesheet" />
@@ -31,7 +31,7 @@
     <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128" />
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="MJ" />
+    <meta property="og:title" content="" />
     <!-- <meta property="og:url" content="https://webstoryboy.co.kr/" /> -->
     <meta
       property="og:image"
@@ -42,7 +42,7 @@
     <!-- twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <!-- <meta name="twitter:site" content="@webstoryboy" /> -->
-    <meta name="twitter:title" content="MJ" />
+    <meta name="twitter:title" content="" />
     <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
     <meta
       property="twitter:image"
@@ -94,16 +94,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="../index.html" class="navbar-brand">MJ'S &lt;/doc&gt;</a>
+          <a href="" class="navbar-brand"></a>
         </div>
         <nav
           class="collapse navbar-collapse bs-navbar-collapse pull-right"
           role="navigation"
         >
           <ul class="nav navbar-nav">
-            <li><a href="https://mo0647.tistory.com">Tistory</a></li>
-            <li><a href="https://codepen.io/mj0614k">Codepen</a></li>
-            <li><a href="https://github.com/mj0614k/Coding">Github</a></li>
+            <li><a href="">Tistory</a></li>
+            <li><a href="">Codepen</a></li>
+            <li><a href="">Github</a></li>
           </ul>
         </nav>
       </div>
@@ -112,9 +112,7 @@
       <div class="container">
         <h1>SVG Animation Reference v1.0 &lt;/doc&gt;</h1>
         <p>
-          <a href="https://richclub8.dothome.co.kr" target="_blank"
-            >richclub8.dothome.co.kr</a
-          >
+          <a href="" target="_blank"></a>
         </p>
       </div>
     </div>
